# arcsys

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
examples/: cli.rs
src/: error.rs  file_traits.rs  helpers.rs  lib.rs  pac.rs  traits.rs
src/bbcf/: hip.rs  hpl.rs  jonbin.rs  mod.rs  pac.rs
src/dbzop/: mod.rs
src/ggacpr/: mod.rs  obj.rs  script.rs
src/ggst/: jonbin.rs  mod.rs  pac.rs
src/ggxrd/: jonbin.rs  mod.rs
