[package]
name = "arcsys"
version = "0.5.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.4"
nom = "7.0"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
flate2 = "1.0"
binrw = "0.13"
bitflags = "2.4"
encoding_rs = "0.8.33"

[dev-dependencies]
hex = "0.4.3"
clap = { version = "4.2", features = ["derive"] }
anyhow = "1.0"
rayon = "1.7"
serde_json = "1.0"
smallvec = "1.10"
# for test folders
walkdir = "2.4.0"

[[example]]
name = "cli"
